--- a/ava.html
+++ b/ava.html
@@ -31,6 +31,27 @@
     .search-input:focus {
       box-shadow: 0 0 0 3px rgba(76, 0, 255, 0.2);
     }
+    .mobile-menu {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: white;
+      z-index: 50;
+      padding: 1rem;
+      transform: translateX(-100%);
+      transition: transform 0.3s ease-in-out;
+    }
+    .mobile-menu.active {
+      transform: translateX(0);
+    }
+    @media (max-width: 768px) {
+      .mobile-menu {
+        display: block;
+      }
+    }
   </style>
 </head>
 <body class="bg-gray-50">
@@ -40,6 +61,12 @@
         <div class="flex items-center space-x-2">
           <span class="text-xl font-semibold text-primary">Kinnisvara</span>
         </div>
+        <!-- Mobile Menu Button -->
+        <button id="mobileMenuButton" class="md:hidden p-2 rounded-lg hover:bg-gray-100">
+          <svg class="w-6 h-6 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+          </svg>
+        </button>
         <nav class="hidden md:flex space-x-8">
           <a href="ava.html" class="text-gray-600 hover:text-primary">Avaleht</a>
           <a href="map.html" class="text-gray-600 hover:text-primary">Kaart</a>
@@ -51,16 +78,35 @@
     </div>
   </header>
 
+  <!-- Mobile Menu -->
+  <div id="mobileMenu" class="mobile-menu">
+    <div class="flex justify-between items-center mb-6">
+      <span class="text-xl font-semibold text-primary">Kinnisvara</span>
+      <button id="closeMobileMenu" class="p-2 rounded-lg hover:bg-gray-100">
+        <svg class="w-6 h-6 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+        </svg>
+      </button>
+    </div>
+    <nav class="flex flex-col space-y-4">
+      <a href="ava.html" class="text-gray-600 hover:text-primary py-2">Avaleht</a>
+      <a href="map.html" class="text-gray-600 hover:text-primary py-2">Kaart</a>
+      <a href="paringud.html" class="text-gray-600 hover:text-primary py-2">Päringud</a>
+      <a href="#" class="text-gray-600 hover:text-primary py-2">Kliendid</a>
+      <a href="#" class="text-gray-600 hover:text-primary py-2">Meist</a>
+    </nav>
+  </div>
+
   <main class="max-w-7xl mx-auto px-4 py-8">
     <!-- Hero Section with Search -->
-    <div class="bg-gradient-to-r from-purple-600 to-blue-600 text-white rounded-2xl p-8 mb-8">
-      <h1 class="text-4xl font-bold mb-4">Kinnisvara ostmine ja müümine</h1>
-      <p class="text-lg opacity-90 mb-8">Leia endale sobiv kinnisvara meie valikus!</p>
+    <div class="bg-gradient-to-r from-purple-600 to-blue-600 text-white rounded-2xl p-4 md:p-8 mb-8">
+      <h1 class="text-3xl md:text-4xl font-bold mb-4">Kinnisvara ostmine ja müümine</h1>
+      <p class="text-base md:text-lg opacity-90 mb-8">Leia endale sobiv kinnisvara meie valikus!</p>
       
       <!-- Search Section -->
-      <div class="bg-white rounded-xl p-6 shadow-lg">
+      <div class="bg-white rounded-xl p-4 md:p-6 shadow-lg">
         <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
-          <div class="col-span-2">
+          <div class="md:col-span-2">
             <input type="text" placeholder="Otsi aadressi või piirkonda..." class="w-full px-4 py-3 rounded-lg border border-gray-300 search-input focus:outline-none focus:border-primary text-gray-900 placeholder-gray-500">
           </div>
           <div>
@@ -83,7 +129,7 @@
           </div>
         </div>
         <div class="mt-4 flex justify-end">
-          <button class="bg-primary text-white px-8 py-3 rounded-lg hover:opacity-90 transition-opacity">
+          <button class="w-full md:w-auto bg-primary text-white px-8 py-3 rounded-lg hover:opacity-90 transition-opacity">
             Otsi
           </button>
         </div>
@@ -314,5 +360,27 @@
       </div>
     </div>
   </footer>
+
+  <script>
+    // Mobile menu functionality
+    const mobileMenuButton = document.getElementById('mobileMenuButton');
+    const closeMobileMenu = document.getElementById('closeMobileMenu');
+    const mobileMenu = document.getElementById('mobileMenu');
+
+    mobileMenuButton.addEventListener('click', () => {
+      mobileMenu.classList.add('active');
+    });
+
+    closeMobileMenu.addEventListener('click', () => {
+      mobileMenu.classList.remove('active');
+    });
+
+    // Close mobile menu when clicking outside
+    document.addEventListener('click', (e) => {
+      if (!mobileMenu.contains(e.target) && !mobileMenuButton.contains(e.target)) {
+        mobileMenu.classList.remove('active');
+      }
+    });
+  </script>
 </body>
 </html>
